--- a/frontend-learning/Framework7/文档_doc/3-组件-导航栏&工具栏.md
+++ b/frontend-learning/Framework7/文档_doc/3-组件-导航栏&工具栏.md
@@ -6,7 +6,7 @@
 ## 固定布局： 每个页面有自己的导航栏与工具栏，它们不跟随页面滚动
 - navbar 在 page-content 外，在 page 内
 - page 中还有 navbar-fixed 和 toolbar-fixed 类
-- 如果你想要对单视图中的每个页面使用固定布局，可以直接在父页面(<div class="pages">)上添加“navbar-fixed”和“toolbar-fixed”类，而不是对每个单页面(<div class="page">)分别添加。
+- 如果你想要对单视图中的每个页面使用固定布局，可以直接在父页面(\<div class="pages">)上添加“navbar-fixed”和“toolbar-fixed”类，而不是对每个单页面(\<div class="page">)分别添加。
 
 ## 穿透布局： 不同页面切换中，导航栏和工具栏保持不变
 - navbar 在 page 外，在 view 内
