--- a/Linux-learning/韩顺平linux/环境变量.md
+++ b/Linux-learning/韩顺平linux/环境变量.md
@@ -1,1 +1,5 @@
 # 环境变量文件为 /etc/profile
+
+# env 命令可以查看另外一些环境变量，修改 env 的 bash指向某个特定的 bash 版本
+# 查看系统中有哪些 shell 解释器，可以查找以 sh 结尾的文件， ls -l /bin/\*sh
+chsh -s /bin/csh
