--- a/Linux-learning/韩顺平linux/环境变量.md
+++ b/Linux-learning/韩顺平linux/环境变量.md
@@ -1,4 +1,11 @@
-# 环境变量文件为 /etc/profile
+# 环境变量文件为 /etc/profile 或者 ~/.profile [阅读教程](http://c.biancheng.net/cpp/html/2730.html)
+
+登录系统后，Shell会有一个初始化的过程，用来设置环境变量。这个阶段，Shell会读取 /etc/profile 和 .profile 两个文件，过程如下：
+- Shell首先检查 /etc/profile 文件是否存在，如果存在，就读取内容，否则就跳过，但是不会报错。
+- 然后检查你的主目录（登录目录~）中是否存在 .profile 文件，如果存在，就读取内容，否则就跳过，也不会报错。
+
+读取完上面两个文件，Shell就会出现 $ 命令提示符：
+
 
 # env 命令可以查看另外一些环境变量，修改 env 的 bash指向某个特定的 bash 版本
 # 查看系统中有哪些 shell 解释器，可以查找以 sh 结尾的文件， ls -l /bin/\*sh
