--- a/frontend-learning/Framework7/文档_doc/3-组件-导航栏&工具栏-导航栏.md
+++ b/frontend-learning/Framework7/文档_doc/3-组件-导航栏&工具栏-导航栏.md
@@ -27,15 +27,30 @@
 - myApp.showNavbar(navbar)，或者某个具体的 view 上调用： view.showNavbar()
 
         var myApp = new Framework7();
-
         var $ = Framework7.$;
-
         var mainView = myApp.addView('.view-main');
 
         $('.hide-navbar').on('click', function () {
             mainView.hideNavbar();
         });
-
         $('.show-navbar').on('click', function () {
             mainView.showNavbar();
         });
+### 自动隐藏导航栏
+- 在通过Ajax载入的页面上，当你不需要导航栏时，Framework7允许你自动隐藏导航栏。它只在你使用穿透类型的布局时才有用。为了实现这一点，你要做的是添加"no-navbar"类到载入的页面中(<div class="page no-navbar">)，然后在那里放置一个空的导航栏：
+
+        <!-- Empty Navbar -->
+        <div class="navbar">
+          <div class="navbar-inner">
+          </div>
+        </div>          
+
+        <!-- Page has additional "no-navbar" class，进入此页面会自动隐藏navbar -->
+        <div data-page="about" class="page no-navbar">
+          <div class="page-content">
+            <div class="content-block">
+              <p><a href="#" class="back button">Go Back</a></p>
+              ...
+            </div>
+          </div>
+        </div>
