--- a/Javascript-learning/TypeScript/TypeScript.doc.md/3.Interfaces.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/3.Interfaces.TypeScript.doc.md
@@ -46,7 +46,7 @@ printLabel(myObj);
 
 The interface `LabelledValue` is a name we can now use to describe the requirement in the previous example. It still represents having a single property called `label` that is of type string. Notice we didn’t have to explicitly say that the object we pass to `printLabel` implements this interface like we might have to in other languages. Here, it’s only the shape that matters. If the object we pass to the function meets the requirements listed, then it’s allowed.
 
-接口 `LabelledValue` 是一个我们可以用来描述需求的名字。它代表一个具有单个属性且名为 `label` 的字符串类型。注意，并没有明确的规定传给 `printLabel` 的对象需要像其他语言那样实现该接口。在这里，我们只关心它的外形。如果传入的这个对象满足我们在接口中列出的要求，那么它就是被允许的。
+接口 `LabelledValue` 是一个我们可以用来描述需求的名字。它代表一个具有单个属性且该属性名为 `label` 值为字符串类型的对象。注意，并没有明确的规定传给 `printLabel` 的对象需要像其他语言那样实现该接口。在这里，我们只关心它的外形。如果传入的这个对象满足我们在接口中列出的要求，那么它就是被允许的。
 
 It’s worth pointing out that the type-checker does not require that these properties come in any sort of order, only that the properties the interface requires are present and have the required type.
 
@@ -462,7 +462,7 @@ Because `createClock`’s first parameter is of type `ClockConstructor`, in `cre
 
 Like classes, interfaces can extend each other. This allows you to copy the members of one interface into another, which gives you more flexibility in how you separate your interfaces into reusable components.
 
-接口可以像类那样相互继承, 这使得你可以将译者接口的成员复制到另一个接口中去, 让你能够写出相互分离的可重用组件.
+接口可以像类那样相互继承, 这使得你可以将一个接口的成员复制到另一个接口中去, 让你能够写出相互分离的可重用组件.
 
 ```ts
 interface Shape {
