--- a/Javascript-learning/TypeScript/TypeScript.doc.md/4.Classes.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/4.Classes.TypeScript.doc.md
@@ -267,7 +267,7 @@ let howard = new Employee("Howard", "Sales");
 let john = new Person("John"); // Error: The 'Person' constructor is protected
 ```
 
-## Readonly 修改器(modifier) decorator译为修饰器，modifier译为修改器
+## Readonly 修饰符(modifier)
 
 You can make properties readonly by using the `readonly` keyword. Readonly properties must be initialized at their declaration or in the constructor.
 
@@ -305,13 +305,13 @@ Notice how we dropped `theName` altogether and just use the shortened `readonly 
 
 Parameter properties are declared by prefixing a constructor parameter with an accessibility modifier or readonly, or both. Using private for a parameter property declares and initializes a private member; likewise, the same is done for public, protected, and readonly.
 
-参数属性的声明方式为：在构造函数参数中使用访问修改器或者 readonly 修改器，或者结合两者使用。使用 `private` 参数属性声明的就是 `private` 成员，其它几个也是同理。
+参数属性的声明方式为：在构造函数参数中使用访问修饰符或者 readonly 修饰符，或者结合两者使用。使用 `private` 参数属性声明的就是 `private` 成员，其它几个也是同理。
 
 ## 访问器
 
 TypeScript supports getters/setters as a way of intercepting accesses to a member of an object. This gives you a way of having finer-grained control over how a member is accessed on each object.
 
-TypeScript 支持使用 getters/setters 来拦截对对象的成员访问。这让你可以更细致地控制每个对象上成员的访问方式。
+TypeScript 支持使用 getters/setters 来拦截对象成员的访问。这让你可以更细致地控制每个对象上成员的访问方式。
 
 Let’s convert a simple class to use `get` and `set`. First, let’s start with an example without getters and setters.
 
@@ -416,7 +416,7 @@ abstract class Animal {
 
 Methods within an abstract class that are marked as abstract do not contain an implementation and must be implemented in derived classes. Abstract methods share a similar syntax to interface methods. Both define the signature of a method without including a method body. However, abstract methods must include the abstract keyword and may optionally include access modifiers.
 
-抽象类中的抽象方法不能包含实现, 必须在派生类中去实现. 抽象方法和接口语法相似, 他们都是只定义方法签名而不包含函数体. 然而, 抽象方法必须包含 `abstract` 关键字, 或者再带一些访问修改器.
+抽象类中的抽象方法不能包含实现, 必须在派生类中去实现. 抽象方法和接口语法相似, 他们都是只定义方法签名而不包含函数体. 然而, 抽象方法必须包含 `abstract` 关键字, 或者再带一些访问修饰符.
 
 ```ts
 abstract class Department {
