--- a/Javascript-learning/TypeScript/TypeScript.doc.md/13.Modules.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/13.Modules.TypeScript.doc.md
@@ -493,3 +493,126 @@ if (needZipValidation) {
 
 To describe the shape of libraries not written in TypeScript, we need to declare the API that the library exposes.
 
+当我们需要配合那些不是使用 TypeScript 来写的第三方库一起使用的时候，我们需要对第三方库暴露出来的API进行声明。
+
+We call declarations that don’t define an implementation “ambient”. Typically, these are defined in `.d.ts` files. If you’re familiar with C/C++, you can think of these as `.h` files. Let’s look at a few examples.
+
+我们把那些还没有定义具体实现的声明称为 “周边的”（“ambient”）。通常它们被定义在 `.d.ts` 文件中。如果你对 C/C++ 比较熟悉， 你可以把这些文件当做 `.h` 头文件， 下面会用例子进行演示。
+
+### 周边模块 （Ambient Modules）
+
+In Node.js, most tasks are accomplished by loading one or more modules. We could define each module in its own `.d.ts` file with top-level export declarations, but it’s more convenient to write them as one larger `.d.ts` file. To do so, we use a construct similar to ambient namespaces, but we use the `module` keyword and the quoted name of the module which will be available to a later import. For example:
+
+Node.js 中的大多数任务都是通过一个或多个模块完成的。我们可以在每个模块的 `.d.ts` 文件中使用顶级 export 声明来定义每个周边模块，但是更方便的是使用一个大的 `.d.ts` 文件来集体声明。为此，我们使用一个类似于周边的名字空间的形式，但是使用关键字 `module` 和引号引起来的供后面使用的模块名。例如：
+
+```ts
+// node.d.ts (simplified excerpt)
+
+declare module "url" {
+    export interface Url {
+        protocol?: string;
+        hostname?: string;
+        pathname?: string;
+    }
+
+    export function parse(urlStr: string, parseQueryString?, slashesDenoteHost?): Url;
+}
+
+declare module "path" {
+    export function normalize(p: string): string;
+    export function join(...paths: any[]): string;
+    export var sep: string;
+}
+```
+
+Now we can `/// <reference> node.d.ts` and then load the modules using `import url = require("url");` or `import * as URL from "url"`.
+
+现在我们可以使用 `/// <reference> node.d.ts` 并且使用 `import url = require("url");` 或者 `import * as URL from "url"` 来加载模块。
+
+```ts
+/// <reference path="node.d.ts"/>
+import * as URL from "url";
+let myUrl = URL.parse("http://www.typescriptlang.org");
+```
+
+### 周边模块简写 （Shorthand ambient modules）
+
+If you don’t want to take the time to write out declarations before using a new module, you can use a shorthand declaration to get started quickly.
+
+如果你不想使用模块之前花时间来写它的声明文件，你可以使用声明简写来快速开始开发。
+
+```ts
+// declarations.d.ts
+
+declare module "hot-new-module";
+```
+
+All imports from a shorthand module will have the `any` type.
+
+所有从简写模块引入的内容类型都为 `any`。
+
+```ts
+import x, {y} from "hot-new-module";
+x(y);
+```
+
+### 通配符模块声明 （Wildcard module declarations）
+
+Some module loaders such as SystemJS and AMD allow non-JavaScript content to be imported. These typically use a prefix or suffix to indicate the special loading semantics. Wildcard module declarations can be used to cover these cases.
+
+一些像 SystemJS 和 AMD 的模块加载器允许允许引入非 JavaScript 内容。这些通常使用前缀或后缀来表示特殊的加载语义。通配符模块声明可用于涵盖这些情况。
+
+```ts
+declare module "*!text" {
+    const content: string;
+    export default content;
+}
+// Some do it the other way around.
+declare module "json!*" {
+    const value: any;
+    export default value;
+}
+```
+
+Now you can import things that match `"*!text"` or `"json!*"`.
+
+现在你可以引入像 `"*!text"` 或者 `"json!*"` 这样的内容。
+
+```ts
+import fileContent from "./xyz.txt!text";
+import data from "json!http://example.com/data.json";
+console.log(data, fileContent);
+```
+
+### UMD 模块
+
+Some libraries are designed to be used in many module loaders, or with no module loading (global variables). These are known as UMD modules. These libraries can be accessed through either an import or a global variable. For example:
+
+一些第三方库被设计为可以在许多模块加载器中加载，或者没有模块加载（全局变量）。这些就被称作 UMD 模块。这些库通过 `import` 或者全局变量访问，例如：
+
+```ts
+// math-lib.d.ts
+
+export function isPrime(x: number): boolean;
+export as namespace mathLib;
+```
+
+The library can then be used as an import within modules:
+
+这个库可以在模块中使用 `import` 引用：
+
+```ts
+import { isPrime } from "math-lib";
+isPrime(2);
+mathLib.isPrime(2); // ERROR: can't use the global definition from inside a module
+```
+
+It can also be used as a global variable, but only inside of a script. (A script is a file with no imports or exports.)
+
+也可以当做全局变量使用，但仅限于在脚本中（脚本就是没有 imports 和exports 的文件）：
+
+```ts
+mathLib.isPrime(2);
+```
+
+## Guidance for structuring modules
