--- a/Javascript-learning/TypeScript/TypeScript.doc.md/13.Modules.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/13.Modules.TypeScript.doc.md
@@ -615,4 +615,286 @@ It can also be used as a global variable, but only inside of a script. (A script
 mathLib.isPrime(2);
 ```
 
-## Guidance for structuring modules
+## 如何构建模块
+
+### 尽可能在顶级导出内容
+
+>
+    译者注解:
+    尽可能在顶级导出, 就是说全部在模块中通过 `export aaa; export bbb;` 这种方式, 即 aaa 和 bbb 都是在顶级导出的, 而不是嵌套在其他对象中)
+
+Consumers of your module should have as little friction as possible when using things that you export. Adding too many levels of nesting tends to be cumbersome, so think carefully about how you want to structure things.
+
+你应该让使用你的模块的用户使用起来更加平滑, 而不是很多摩擦. 添加太多的嵌套层级往往处理和使用起来都非常麻烦, 因此在构建它们之前应该想清楚了再去做.
+
+Exporting a namespace from your module is an example of adding too many layers of nesting. While namespaces sometime have their uses, they add an extra level of indirection when using modules. This can quickly become a pain point for users, and is usually unnecessary.
+
+从模块中导出一个命名空间是一个添加太多层级的例子. 虽然名字空间有时候也很有用处, 但是他们给模块的使用添加了许多额外层级. 很快就会成为用户的痛点, 并且通常并非必需这么做.
+
+Static methods on an exported class have a similar problem - the class itself adds a layer of nesting. Unless it increases expressivity or intent in a clearly useful way, consider simply exporting a helper function.
+
+导出的类的静态方法也会有类似的问题 - 类本身就是嵌套层. 除非使用类的这种嵌套能明显增加代码的表现力(译者理解表现力: 比如说 `dog.bark()` 这种就比单独的一个函数 `bark()` 更具有表现力, 它能够表示这是一只狗在叫, 单独的一个 `bark()` 并不能说明什么), 否则请考虑导出一个辅助函数.
+
+If you’re only exporting a single **`class`** or **`function`**, use **`export default`**
+
+如果你仅导出单个 **`class`** 或者 **`function`**, 请使用 **`export default`**
+
+Just as “exporting near the top-level” reduces friction on your module’s consumers, so does introducing a default export. If a module’s primary purpose is to house one specific export, then you should consider exporting it as a default export. This makes both importing and actually using the import a little easier. For example:
+
+正如 "尽可能在顶级导出内容" 能够减少与模块使用者之间的摩擦一样, 默认导出也是如此. 如果一个模块的目的是提供一个统一的出口, 那就更应该考虑把它当做默认导出. 这让导入和导出都会更加轻松, 例如:
+
+```ts
+// MyClass.ts
+
+export default class SomeType {
+  constructor() { ... }
+}
+```
+
+```ts
+// MyFunc.ts
+
+export default function getThing() { return "thing"; }
+```
+
+```ts
+// Consumer.ts
+
+import t from "./MyClass";
+import f from "./MyFunc";
+let x = new t();
+console.log(f());
+```
+
+This is optimal for consumers. They can name your type whatever they want (t in this case) and don’t have to do any excessive dotting to find your objects.
+
+这对使用者来说是最方便的. 它们可以根据自己的喜好任意命名从你那里得到的导出内容, 而不需要使用很多的成员访问符来找到它们要使用的内容(就是`.`, 比如说 `dog.bark()` 就是访问 `dog` 的 `bark` 成员)
+
+If you’re exporting multiple objects, put them all at top-level
+
+如果你要导出多个对象, 就把它们全部放在顶级导出:
+
+```ts
+// MyThings.ts
+
+export class SomeType { /* ... */ }
+export function someFunc() { /* ... */ }
+```
+
+Conversely when importing:
+
+相反, 当引入时:
+
+Explicitly list imported names
+
+可以显式的指定引入哪些名字的内容
+
+```ts
+// Consumer.ts
+
+import { SomeType, someFunc } from "./MyThings";
+let x = new SomeType();
+let y = someFunc();
+```
+
+Use the namespace import pattern if you’re importing a large number of things
+
+在引入大量内容时, 如果使用名字空间的模式就像下面这样(就需要使用成员访问符`.`)
+
+```ts
+// MyLargeModule.ts
+
+export class Dog { ... }
+export class Cat { ... }
+export class Tree { ... }
+export class Flower { ... }
+```
+
+```ts
+// Consumer.ts
+
+import * as myLargeModule from "./MyLargeModule.ts";
+let x = new myLargeModule.Dog();
+```
+
+### 通过二次导出来继承
+
+Often you will need to extend functionality on a module. A common JS pattern is to augment the original object with extensions, similar to how JQuery extensions work. As we’ve mentioned before, modules do not merge like global namespace objects would. The recommended solution is to not mutate the original object, but rather export a new entity that provides the new functionality.
+
+你可能经常会需要继承一个模块的功能. 一种常见的 JS 模式就是通过扩展来增加源对象, 就像 jQuery 的扩展一样. 就像我们前面提到的, 模块不会像全局命名空间哪样合并. 因此推荐的解决方式就是不改变原始对象, 而是导出一个满足功能需求的新实体(大概意思就是重新导出一个模块).
+
+Consider a simple calculator implementation defined in module `Calculator.ts`. The module also exports a helper function to test the calculator functionality by passing a list of input strings and writing the result at the end.
+
+以一个定义在模块 `Calculator.ts` 中简单的计算器为例, 这个模块也可以导出一个 (根据传入的输入列表返回计算结果的) 辅助函数来测试计算器功能.
+
+```ts
+// Calculator.ts
+
+export class Calculator {
+    private current = 0;
+    private memory = 0;
+    private operator: string;
+
+    protected processDigit(digit: string, currentValue: number) {
+        if (digit >= "0" && digit <= "9") {
+            return currentValue * 10 + (digit.charCodeAt(0) - "0".charCodeAt(0));
+        }
+    }
+
+    protected processOperator(operator: string) {
+        if (["+", "-", "*", "/"].indexOf(operator) >= 0) {
+            return operator;
+        }
+    }
+
+    protected evaluateOperator(operator: string, left: number, right: number): number {
+        switch (this.operator) {
+            case "+": return left + right;
+            case "-": return left - right;
+            case "*": return left * right;
+            case "/": return left / right;
+        }
+    }
+
+    private evaluate() {
+        if (this.operator) {
+            this.memory = this.evaluateOperator(this.operator, this.memory, this.current);
+        }
+        else {
+            this.memory = this.current;
+        }
+        this.current = 0;
+    }
+
+    public handleChar(char: string) {
+        if (char === "=") {
+            this.evaluate();
+            return;
+        }
+        else {
+            let value = this.processDigit(char, this.current);
+            if (value !== undefined) {
+                this.current = value;
+                return;
+            }
+            else {
+                let value = this.processOperator(char);
+                if (value !== undefined) {
+                    this.evaluate();
+                    this.operator = value;
+                    return;
+                }
+            }
+        }
+        throw new Error(`Unsupported input: '${char}'`);
+    }
+
+    public getResult() {
+        return this.memory;
+    }
+}
+
+export function test(c: Calculator, input: string) {
+    for (let i = 0; i < input.length; i++) {
+        c.handleChar(input[i]);
+    }
+
+    console.log(`result of '${input}' is '${c.getResult()}'`);
+}
+```
+
+Here is a simple test for the calculator using the exposed `test` function.
+
+下面就是使用这个 `test` 函数的例子:
+
+```ts
+// TestCalculator.ts
+
+import { Calculator, test } from "./Calculator";
+
+
+let c = new Calculator();
+test(c, "1+2*33/11="); // prints 9
+```
+
+Now to extend this to add support for input with numbers in bases other than 10, let’s create `ProgrammerCalculator.ts`
+
+现在来扩展这个模块让它能够支持其他进制的计算, 创建一个 `ProgrammerCalculator.ts`
+
+```ts
+// ProgrammerCalculator.ts
+
+import { Calculator } from "./Calculator";
+
+class ProgrammerCalculator extends Calculator {
+    static digits = ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B", "C", "D", "E", "F"];
+
+    constructor(public base: number) {
+        super();
+        const maxBase = ProgrammerCalculator.digits.length;
+        if (base <= 0 || base > maxBase) {
+            throw new Error(`base has to be within 0 to ${maxBase} inclusive.`);
+        }
+    }
+
+    protected processDigit(digit: string, currentValue: number) {
+        if (ProgrammerCalculator.digits.indexOf(digit) >= 0) {
+            return currentValue * this.base + ProgrammerCalculator.digits.indexOf(digit);
+        }
+    }
+}
+
+// Export the new extended calculator as Calculator
+export { ProgrammerCalculator as Calculator };
+
+// Also, export the helper function
+export { test } from "./Calculator";
+```
+
+The new module `ProgrammerCalculator` exports an API shape similar to that of the original `Calculator` module, but does not augment any objects in the original module. Here is a test for our ProgrammerCalculator class:
+
+这个新的 `ProgrammerCalculator` 模块导出一个和源 `Calculator` 模块相似的 API, 但是并没有给源模块添加任何东西. 下面测试这个模块:
+
+```ts
+// TestProgrammerCalculator.ts
+
+import { Calculator, test } from "./ProgrammerCalculator";
+
+let c = new Calculator(2);
+test(c, "001+010="); // prints 3
+```
+
+### 不要在模块中使用名字空间
+
+When first moving to a module-based organization, a common tendency is to wrap exports in an additional layer of namespaces. Modules have their own scope, and only exported declarations are visible from outside the module. With this in mind, namespace provide very little, if any, value when working with modules.
+
+当第一次进入到基于模块的代码组织方式中, 一种常见的趋势就是将导出的内容放到名字空间的附加层中. 模块有自己的作用域, 只有导出的内容才能在模块外部访问. 考虑到这一点, 在使用模块时名字空间提供的价值就非常有限.
+
+On the organization front, namespaces are handy for grouping together logically-related objects and types in the global scope. For example, in C#, you’re going to find all the collection types in System.Collections. By organizing our types into hierarchical namespaces, we provide a good “discovery” experience for users of those types. Modules, on the other hand, are already present in a file system, necessarily. We have to resolve them by path and filename, so there’s a logical organization scheme for us to use. We can have a /collections/generic/ folder with a list module in it.
+
+名字空间在全局范围内将一些逻辑相关的对象组织在一起, 例如 C#中, 你在 `System.Collections` 中能找到所有的集合类型. 通过将不同类型的代码组织到不同层次的名字空间中能够给用户提供一种很好的 "探索发现" 的体验. 另一方面来说, 模块已经存在与文件系统中, 而且很有必要.  我们必须通过路径和文件名来使用它们, 因此有一种比较符合逻辑的组织方案供我们使用: 比如我们可以用一个 `/collections/generic/` 目录来存放模块列表.
+
+Namespaces are important to avoid naming collisions in the global scope. For example, you might have `My.Application.Customer.AddForm` and `My.Application.Order.AddForm` – two types with the same name, but a different namespace. This, however, is not an issue with modules. Within a module, there’s no plausible reason to have two objects with the same name. From the consumption side, the consumer of any given module gets to pick the name that they will use to refer to the module, so accidental naming conflicts are impossible.
+
+名字空间可以避免全局作用域内发生命名冲突. 例如, 你可能有 `My.Application.Customer.AddForm` 和 `My.Application.Order.AddForm` - 两种类型具有同样的名字, 但是处在不同的名字空间中. 然而这并不是模块的问题. 从模块的角度来说, 在同一个模块中, 没有理由让两个对象具有相同的名字. 从使用者的角度来说, 他们通过名字来选择使用指定模块中的哪些内容, 因此命名冲突也是不可能发生在使用者这边的.
+
+> For more discussion about modules and namespaces see Namespaces and Modules.
+> 更多关于名字空间和模块之间的讨论请看 《名字空间和模块》 一章
+
+### Red Flags
+
+All of the following are red flags for module structuring. Double-check that you’re not trying to namespace your external modules if any of these apply to your files:
+
+下面罗列了模块构建中需要避免的一些情况. 如果其中任何一个适用于你的文件, 请多次检查以确保你没有对你的外部模块使用名字空间.
+
+- A file whose only top-level declaration is `export namespace Foo { ... }` (remove `Foo` and move everything ‘up’ a level)
+
+>> 如果一个文件唯一的顶级导出是 `export namespace Foo { ... }`(那么请移除 `Foo` 名字空间, 把所有内容都提一个层级)
+
+- A file that has a single `export class` or `export function` (consider using `export default`)
+
+>> 一个文件中只有一个 `export class` 或者 `export function`(请使用`export default`)
+
+- Multiple files that have the same `export namespace Foo {` at top-level (don’t think that these are going to combine into one `Foo`!)
+
+>> 多个文件都具有相同的顶级导出内容 `export namespace Foo{`(不要认为他们能够组合成一个 `Foo`!)
