--- a/Javascript-learning/TypeScript/TypeScript.doc.md/13.Modules.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/13.Modules.TypeScript.doc.md
@@ -12,19 +12,19 @@ Starting with ECMAScript 2015, JavaScript has a concept of modules. TypeScript s
 
 Modules are executed within their own scope, not in the global scope; this means that variables, functions, classes, etc. declared in a module are not visible outside the module unless they are explicitly exported using one of the `export` forms. Conversely, to consume a variable, function, class, interface, etc. exported from a different module, it has to be imported using one of the `import` forms.
 
-模块在其内部作用域中执行, 而非全局作用域. 也就是说在模块中声明的变量、函数、类等在模块外不可见, 除非显式的使用 `export` 导出它们. 相反, 如果要使用它们, 你必须通过 `import` 导入其他模块 `export` 导出来的内容.
+模块在其内部作用域中执行, 而非全局作用域中. 也就是说在模块中声明的变量、函数、类等在模块外不可见, 除非显式的使用 `export` 导出它们. 相反, 如果要使用它们, 你必须通过 `import` 导入其他模块通过 `export` 导出来的内容.
 
 Modules are declarative; the relationships between modules are specified in terms of imports and exports at the file level.
 
-模块是声明性的; 模块之间的关系通过文件的导入和导出来确定.
+模块是声明性的编程模式(一种编程模式, 还有命令式编程模式); 模块之间的关系通过文件之间的导入和导出来确定.
 
 Modules import one another using a module loader. At runtime the module loader is responsible for locating and executing all dependencies of a module before executing it. Well-known modules loaders used in JavaScript are the CommonJS module loader for Node.js and require.js for Web applications.
 
-模块之间是通过模块加载器相互引入的. 在运行时, 模块加载器负责在执行模块之前先定位和执行该模块的依赖. 比较知名的模块加载器有 Node.js 的 CommonJS 模块加载器和 Web 应用的 require.js
+模块之间是通过模块加载器相互引入到对方的. 在运行时, 模块加载器负责在执行当前模块之前先找到和执行该模块的所有依赖. 比较知名的模块加载器有 Node.js 的 CommonJS 模块加载器和 Web 应用的 require.js。
 
 In TypeScript, just as in ECMAScript 2015, any file containing a top-level `import` or `export` is considered a module. Conversely, a file without any top-level `import` or `export` declarations is treated as a script whose contents are available in the global scope (and therefore to modules as well).
 
-在 TypeScript 中, 和 ECMAScript 2015 中的一样,  任何包含顶级 `import` 或 `export` 的文件都被当做模块. 相反, 如果一个文件不包含顶级的 `import` 或 `export` 声明就会被当做一个全局作用域中的脚本 (也适用于模块).
+在 TypeScript 中, 和 ECMAScript 2015 中的一样,  任何包含顶级 `import` 或 `export` 的文件都被当做模块. 相反, 一个不包含顶级 `import` 或 `export` 声明的文件就会被当做一个它的内容全部处在全局作用域中的脚本 (也适用于模块).
 
 ## 导出
 
@@ -32,7 +32,7 @@ In TypeScript, just as in ECMAScript 2015, any file containing a top-level `impo
 
 Any declaration (such as a variable, function, class, type alias, or interface) can be exported by adding the `export` keyword.
 
-任何声明(如变量、函数、类、类型别名或者接口) 都能够通过关键字 `export` 导出.
+任何声明 (如变量、函数、类、类型别名或者接口) 都能够通过关键字 `export` 导出.
 
 ```ts
 // Validation.ts
@@ -58,7 +58,7 @@ export class ZipCodeValidator implements StringValidator {
 
 Export statements are handy when exports need to be renamed for consumers, so the above example can be written as:
 
-导出语句在为使用者导出需要命名的变量时非常方便, 因此前面的例子可以这样写:
+如果你需要 (为使用者) 对导出的内容重命名时使用导出语句非常方便, 因此前面的例子可以这样写:
 
 ```ts
 class ZipCodeValidator implements StringValidator {
@@ -70,11 +70,11 @@ export { ZipCodeValidator };
 export { ZipCodeValidator as mainValidator };
 ```
 
-### 再次导出
+### 二次导出
 
 Often modules extend other modules, and partially expose some of their features. A re-export does not import it locally, or introduce a local variable.
 
-通常会有一个模块继承自另一个模块, 并且只暴露其中的一部分特性. 再次导出不需要在本地导入, 或者引入本地变量.
+通常会存在某个模块扩展自另一个模块的情况, 并且这个模块只希望暴露其中的一部分特性. 二次导出不需要在本地进行导入, 也不会引入本地变量.
 
 ```ts
 // ParseIntBasedZipCodeValidator.ts
@@ -105,7 +105,7 @@ export * from "./ZipCodeValidator";  // exports class 'ZipCodeValidator'
 
 Importing is just about as easy as exporting from a module. Importing an exported declaration is done through using one of the `import` forms below:
 
-导入和导出一样简单易用. 导入是使用关键字 `import` 来完成:
+导入和导出一样简单易用. 导入是使用关键字 `import` 来完成的:
 
 ```ts
 import { ZipCodeValidator } from "./ZipCodeValidator";
@@ -124,7 +124,7 @@ let myValidator = new ZCV();
 
 Import the entire module into a single variable, and use it to access the module exports
 
-将以整个模块导入一个变量, 通过这个变量来访问模块导出的内容:
+将整个模块导入到一个变量, 然后通过这个变量来访问那个模块导出的内容:
 
 ```ts
 import * as validator from "./ZipCodeValidator";
@@ -135,7 +135,7 @@ let myValidator = new validator.ZipCodeValidator();
 
 Though not recommended practice, some modules set up some global state that can be used by other modules. These modules may not have any exports, or the consumer is not interested in any of their exports. To import these modules, use:
 
-虽然不推荐这么做, 但是有一些模块只是设置一些全局状态以供其它模块使用. 这些模块可能没有任何导出, 或者使用者并不关心它们导出了什么内容. 直接导入这些模块:
+虽然不推荐这么做, 但是有一些模块只是设置一些全局状态以供其它模块使用. 这些模块可能没有任何导出, 或者使用者并不关心它们导出了什么内容. 因此只需要直接导入这些模块即可:
 
 ```ts
 import "./my-module.js";
@@ -145,11 +145,11 @@ import "./my-module.js";
 
 Each module can optionally export a `default` export. Default exports are marked with the keyword `default`; and there can only be one `default` export per module. `default` exports are imported using a different import form.
 
-每个模块都可以有一个 `default` 导出, 它被称之为默认导出. 默认导出使用关键字 `default`; 每个模块只能有一个默认导出. 默认导出使用的导入也有点不一样.
+每个模块都可以有一个 `default` 导出, 它被称之为默认导出. 默认导出使用关键字 `default`; 每个模块只能有一个默认导出. 导入默认导出使用的 `import` 格式也有所不同.
 
 `default` exports are really handy. For instance, a library like JQuery might have a default export of `jQuery` or `$`, which we’d probably also import under the name `$` or `jQuery`.
 
-默认导出非常方便. 比如, jQuery 可能默认导出了 `jQuery` 或 `$`, 因此我们也可以使用 `$` 或者 `jQuery` 来引入它们.
+默认导出非常方便. 比如 jQuery 可能默认导出了 `jQuery` 或 `$`, 因此我们也可以使用 `$` 或者 `jQuery` 来导入它.
 
 ```ts
 // JQuery.d.ts
@@ -168,12 +168,12 @@ $("button.continue").html( "Next Step..." );
 
 Classes and function declarations can be authored directly as default exports. Default export class and function declaration names are optional.
 
-类和函数可以直接写作默认导出的格式. 默认导出的类和函数的名字是可选的.
+类和函数可以直接写作默认导出的形式. 默认导出的类和函数的名字是可选的.
 
 ```ts
 // ZipCodeValidator.ts
 
-export default class ZipCodeValidator {
+export default class ZipCodeValidator {  // 可以没有名字 ZipCodeValidator
     static numberRegexp = /^[0-9]+$/;
     isAcceptable(s: string) {
         return s.length === 5 && ZipCodeValidator.numberRegexp.test(s);
@@ -216,7 +216,9 @@ strings.forEach(s => {
 });
 ```
 
-`default` 导出也可以只导出值:
+`default`  exports can also be just values:
+
+也可以默认导出一个值:
 
 ```ts
 // OneTwoThree.ts
@@ -236,11 +238,11 @@ console.log(num); // "123"
 
 Both CommonJS and AMD generally have the concept of an `exports` object which contains all exports from a module.
 
-CommonJS 和 AMD 通常都有 `exports` 的概念, 这是一个包含了当前模块所有导出内容的对象(比如 Node.js 中 `exports = module.exports = ...` 这种).
+CommonJS 和 AMD 通常都有 `exports` 对象的概念, 这是一个包含了当前模块所有导出内容的对象(比如 Node.js 中 `exports = module.exports = ...` 这种).
 
 They also support replacing the `exports` object with a custom single object. Default exports are meant to act as a replacement for this behavior; however, the two are incompatible. TypeScript supports `export =` to model the traditional CommonJS and AMD workflow.
 
-它们也支持将 `exports` 对象替换为自定义的单个对象. 默认导出也就是这种替换, 然而它们之间并不兼容. TypeScript 支持使用 `export =` 来给传统的 CommonJS 和 AMD 工作流提供支持.
+它们也支持将 `exports` 对象替换为单个自定义对象. 默认导出也就是这种替换, 然而它们之间并不兼容. TypeScript 支持使用 `export =` 来模拟传统 CommonJS 和 AMD 的工作方式.
 
 The `export =` syntax specifies a single object that is exported from the module. This can be a class, interface, namespace, function, or enum.
 
@@ -248,7 +250,7 @@ The `export =` syntax specifies a single object that is exported from the module
 
 When exporting a module using `export =`, TypeScript-specific `import module = require("module")` must be used to import the module.
 
-当使用 `export =` 来导出一个模块时, 必须使用 TypeScript 特定的 `import module = require("module")` 来导入模块.
+_当使用 `export =` 来导出一个模块时, 必须使用 TypeScript 特定的 `import module = require("module")` 来导入模块_.
 
 ```ts
 // ZipCodeValidator.ts
@@ -283,11 +285,11 @@ strings.forEach(s => {
 
 Depending on the module target specified during compilation, the compiler will generate appropriate code for Node.js (CommonJS), require.js (AMD), UMD, SystemJS, or ECMAScript 2015 native modules (ES6) module-loading systems. For more information on what the `define`, `require` and `register` calls in the generated code do, consult the documentation for each module loader.
 
-在编译期间, 编译器会根据指定的模块编译目标为 `Node.js (CommonJS)`、 `require.js (AMD)`、 `UMD`、 `SystemJS` 或者 `ECMAScript 2015 native modules (ES6) module-loading systems` 生成对应的代码. 如果希望了解生成的代码中有关 `define` 、 `require` 和 `register` 调用的具体信息, 请查看相应模块加载器的文档.
+在编译期间, 编译器会根据指定的模块编译目标(命令行可以通过指定参数 `-m` 或者 `--module` 来指定编译的目标代码, 如 `tsc -m amd someTSFile.ts`)为 `Node.js (CommonJS)`、 `require.js (AMD)`、 `UMD`、 `SystemJS` 或者 `ECMAScript 2015 native modules (ES6) module-loading systems` 生成对应的代码. 如果希望了解生成的代码中有关 `define` 、 `require` 和 `register` 调用的具体信息, 请查看相应模块加载器的文档.
 
 This simple example shows how the names used during importing and exporting get translated into the module loading code.
 
-这个简单的例子展示了在导入和导出过程中使用的名称是如何被翻译成模块加载代码的。
+下面这个简单的例子展示了导入和导出过程中使用的名称是如何被编译器转换成对应模块加载的代码。
 
 ```ts
 // SimpleModule.ts
@@ -356,15 +358,17 @@ export var t = something + 1;
 
 Below, we’ve consolidated the Validator implementations used in previous examples to only export a single named export from each module.
 
-下面, 我们把前面的每个例子改成只导出单个具名的内容(导出内容).
+下面, 我们把前面的每个例子都改成只导出单个的具名内容.
 
 To compile, we must specify a module target on the command line. For Node.js, use --module commonjs; for require.js, use --module amd. For example:
 
-我们通过命令行给模块指定了编译目标. 如果要给 Node.js 指定, 使用 `--module commonjs`; 如果指定为 `require.js` 使用 `--module amd`:
+我们可以通过命令行给模块指定编译目标(也可以在 `tsconfig.json` 中指定). 如果要指定编译为 Node.js 代码, 使用 `--module commonjs`; 如果指定为 `require.js` 则使用 `--module amd`, 其它目标类型也是这样指定:
 
 `tsc --module commonjs Test.ts`
 
-When compiled, each module will become a separate .js file. As with reference tags, the compiler will follow import statements to compile dependent files.
+When compiled, each module will become a separate `.js` file. As with reference tags, the compiler will follow import statements to compile dependent files.
+
+编译完成后, 每个模块都被编译成了单个独立的 `.js` 文件. 与引用标记 (引用标记, 即`/// <reference> node.d.ts`, 是 TypeScript 的三斜线指令之一) 一样, 编译器会遵循 import 的顺序来编译所依赖的模块.
 
 ```ts
 // Validation.ts
@@ -429,21 +433,21 @@ strings.forEach(s => {
 
 In some cases, you may want to only load a module under some conditions. In TypeScript, we can use the pattern shown below to implement this and other advanced loading scenarios to directly invoke the module loaders without losing type safety.
 
-在某些情况下, 你可能希望在满足特定条件时才加载指定模块. 在 TypeScript 中, 我们可以使用下面展示的模式来实现这种加载方式和一些其他高级加载场景以直接调用模块加载器而不会丢失类型安全.
+在某些情况下, 你可能希望在满足特定条件时才加载指定模块. 在 TypeScript 中, 我们可以使用下面展示的模式来实现这种加载场景和一些其他高级加载场景, 这种模式直接调用模块加载器加载模块, 从而不会丢失类型安全检查.
 
 The compiler detects whether each module is used in the emitted JavaScript. If a module identifier is only ever used as part of a type annotations and never as an expression, then no `require` call is emitted for that module. This elision of unused references is a good performance optimization, and also allows for optional loading of those modules.
 
-编译器检查每个模块是否在编译的 JavaScript 中有使用. 如果一个模块标识符(即导入的模块引用)只在类型注解中使用而没有在作为表达式使用, 那么该模块就不会有 `require` 调用. 省略掉没有使用到的引用对性能十分有益, 并且带来了按需加载模块的能力.
+编译器会检查每个模块是否在编译的 JavaScript 中有使用. 如果一个模块标识符 (即导入的模块引用) 只在类型注解中使用而没有在表达式中使用 (就是只引入了这个模块, 引入之后就没有使用这个模块), 那么该模块就不会有 `require` 调用. 省略掉没有使用到的引用对性能优化十分有益, 并且为我们带来了按需加载模块的能力.
 
 The core idea of the pattern is that the `import id = require("...")` statement gives us access to the types exposed by the module. The module loader is invoked (through `require`) dynamically, as shown in the `if` blocks below. This leverages the reference-elision optimization so that the module is only loaded when needed. For this pattern to work, it’s important that the symbol defined via an `import` is only used in type positions (i.e. never in a position that would be emitted into the JavaScript).
 
-这种模式的核心思想就是使用 `import id = require("...")` 能够让我们访问模块暴露出来的类型. 像下面这样使用 `if` 语句块可以让模块加载器动态调用模块(通过`require`). 这种方式充分利用了引用优化, 模块只会在需要时被加载. 为了让这个模块能够工作, 最重要的是通过 `import` 得到的符号只能用在跟类型有关的地方(如 不能在会转换成JavaScript的地方)(type positions 翻译为类型相关的地方, 意思就是只会用于类型判断而不会执行模块中具体的代码)
+这种模式的核心思想就是使用 `import id = require("...")` 来让我们访问模块暴露出来的类型. 像下面这样使用 `if` 语句块可以让模块加载器动态调用模块(通过`require`). 这种方式充分利用了引用省略优化, 模块只会在需要时被加载. 为了让这种模式起作用, 最重要的就是通过 `import` 得到的引用符号只能用在跟类型有关的地方(如 永远不要在一个会排放到 JavaScript 中的位置) (译者笔记: 这里我也不能理解, 什么叫永远不能在一个会排放进 JavaScript 的位置, 排放或许可以理解为 "编译进", 但是 TypeScript 的代码本身就是用于编译成 JavaScript 的代码, 如果代码不会出现在 JavaScript, 那有什么意义. 亦或是根据 TypeScript 的编译条件来决定这段代码如何编译这种情况吗? 此处值得商榷!) (type positions 翻译为类型相关的地方, 意思就是只会用于类型判断而不会执行模块中具体的代码)
 
-      理解: 通过 require 引入的变量, 如果不在表达式中使用, 只是引入了模块到一个变量, 那么它就不会被模块加载器加载, 如果它在表达式中使用了, 那么它就会被模块加载器加载到代码中. 如果在某些条件下我们不需要加载这个模块, 而其他一些情况我们又可能会加载这个模块, 那么就可以像下面示例一样通过 if 对条件进行区分.
+      个人理解: 通过 require 引入的变量, 如果不在表达式中使用, 只是引入了模块到一个变量, 那么它就不会被模块加载器加载, 如果它在表达式中使用了, 那么它就会被模块加载器加载到代码中. 如果在某些条件下我们不需要加载这个模块, 而其他一些情况我们又可能会加载这个模块, 那么就可以像下面示例一样通过 if 对条件进行区分.
 
 To maintain type safety, we can use the typeof keyword. The typeof keyword, when used in a type position, produces the type of a value, in this case the type of the module.
 
-我们可以使用 `typeof` 关键字来确保类型安全. `typeof` 用在类型相关的地方会得到一个类型值, 这个值就是这个模块的类型.
+我们可以使用 `typeof` 关键字来维持类型安全. `typeof` 用在类型相关的地方会得到一个类型值, 这个值就是这个模块的类型.
 
 ```ts
 // Dynamic Module Loading in Node.js
@@ -493,17 +497,17 @@ if (needZipValidation) {
 
 To describe the shape of libraries not written in TypeScript, we need to declare the API that the library exposes.
 
-当我们需要配合那些不是使用 TypeScript 来写的第三方库一起使用的时候，我们需要对第三方库暴露出来的API进行声明。
+当我们需要配合那些不是使用 TypeScript 来写的第三方库一起使用的时候，我们需要对第三方库暴露出来的 API 进行声明。
 
 We call declarations that don’t define an implementation “ambient”. Typically, these are defined in `.d.ts` files. If you’re familiar with C/C++, you can think of these as `.h` files. Let’s look at a few examples.
 
-我们把那些还没有定义具体实现的声明称为 “周边的”（“ambient”）。通常它们被定义在 `.d.ts` 文件中。如果你对 C/C++ 比较熟悉， 你可以把这些文件当做 `.h` 头文件， 下面会用例子进行演示。
+我们把那些还没有定义具体实现的声明称为 “外围”（“ambient”）。通常它们被定义在 `.d.ts` 文件中。如果你对 C/C++ 比较熟悉， 你可以把这些文件当做 `.h` 头文件， 下面会用例子进行演示。
 
-### 周边模块 （Ambient Modules）
+### 外围模块 （Ambient Modules）
 
 In Node.js, most tasks are accomplished by loading one or more modules. We could define each module in its own `.d.ts` file with top-level export declarations, but it’s more convenient to write them as one larger `.d.ts` file. To do so, we use a construct similar to ambient namespaces, but we use the `module` keyword and the quoted name of the module which will be available to a later import. For example:
 
-Node.js 中的大多数任务都是通过一个或多个模块完成的。我们可以在每个模块的 `.d.ts` 文件中使用顶级 export 声明来定义每个周边模块，但是更方便的是使用一个大的 `.d.ts` 文件来集体声明。为此，我们使用一个类似于周边的名字空间的形式，但是使用关键字 `module` 和引号引起来的供后面使用的模块名。例如：
+Node.js 中的大多数任务都需要载入一个或多个模块来完成的。我们可以在每个模块的 `.d.ts` 文件中使用顶级 `export` 声明来定义每个外围模块，但是更方便的是使用一个大的 `.d.ts` 文件来集体声明。为此，我们使用一个类似于外围名字空间的构造形式，但是使用关键字 `module` 和引号引起来的 (供后面使用的) 模块名。例如：
 
 ```ts
 // node.d.ts (simplified excerpt)
@@ -525,9 +529,9 @@ declare module "path" {
 }
 ```
 
-Now we can `/// <reference> node.d.ts` and then load the modules using `import url = require("url");` or `import * as URL from "url"`.
+Now we can `/// <reference>` `node.d.ts` and then load the modules using `import url = require("url");` or `import * as URL from "url"`.
 
-现在我们可以使用 `/// <reference> node.d.ts` 并且使用 `import url = require("url");` 或者 `import * as URL from "url"` 来加载模块。
+现在我们可以使用 `/// <reference>`(TypeScript 中的一种三斜线指令) 来引用 `node.d.ts` 并且使用 `import url = require("url");` 或者 `import * as URL from "url"` 来加载模块。
 
 ```ts
 /// <reference path="node.d.ts"/>
@@ -535,11 +539,11 @@ import * as URL from "url";
 let myUrl = URL.parse("http://www.typescriptlang.org");
 ```
 
-### 周边模块简写 （Shorthand ambient modules）
+### 外围模块简写 （Shorthand ambient modules）
 
 If you don’t want to take the time to write out declarations before using a new module, you can use a shorthand declaration to get started quickly.
 
-如果你不想使用模块之前花时间来写它的声明文件，你可以使用声明简写来快速开始开发。
+如果你不想在使用一个新的模块之前花时间来写它的声明文件，你可以简写声明来快速开始开发。
 
 ```ts
 // declarations.d.ts
@@ -556,11 +560,13 @@ import x, {y} from "hot-new-module";
 x(y);
 ```
 
+(注: 实际上还需要先使用 `/// <reference path="t.d.ts"/>` 引用声明文件, 否则找不到 "hot-new-module" 模块)
+
 ### 通配符模块声明 （Wildcard module declarations）
 
 Some module loaders such as SystemJS and AMD allow non-JavaScript content to be imported. These typically use a prefix or suffix to indicate the special loading semantics. Wildcard module declarations can be used to cover these cases.
 
-一些像 SystemJS 和 AMD 的模块加载器允许允许引入非 JavaScript 内容。这些通常使用前缀或后缀来表示特殊的加载语义。通配符模块声明可用于涵盖这些情况。
+一些像 SystemJS 和 AMD 的模块加载器允许引入非 JavaScript 内容。这些通常使用前缀或后缀来表示特殊的加载语义。通配符模块声明可用于涵盖这些情况。
 
 ```ts
 declare module "*!text" {
@@ -576,7 +582,7 @@ declare module "json!*" {
 
 Now you can import things that match `"*!text"` or `"json!*"`.
 
-现在你可以引入像 `"*!text"` 或者 `"json!*"` 这样的内容。
+现在你可以引入文件名与 `"*!text"` 或者 `"json!*"` 匹配的内容(否则 TypeScript 会默认在引入的模块名后面添加 `.ts` 后缀当做 TypeScript 文件处理)。
 
 ```ts
 import fileContent from "./xyz.txt!text";
@@ -588,7 +594,7 @@ console.log(data, fileContent);
 
 Some libraries are designed to be used in many module loaders, or with no module loading (global variables). These are known as UMD modules. These libraries can be accessed through either an import or a global variable. For example:
 
-一些第三方库被设计为可以在许多模块加载器中加载，或者没有模块加载（全局变量）。这些就被称作 UMD 模块。这些库通过 `import` 或者全局变量访问，例如：
+一些第三方库被设计为能够在许多模块加载器中使用，或者不会有模块加载（全局变量）。这些就被称作 UMD 模块。通常这些库可以通过 `import`(在模块中) 或者全局变量(在脚本中) 来访问，例如：
 
 ```ts
 // math-lib.d.ts
@@ -625,15 +631,15 @@ mathLib.isPrime(2);
 
 Consumers of your module should have as little friction as possible when using things that you export. Adding too many levels of nesting tends to be cumbersome, so think carefully about how you want to structure things.
 
-你应该让使用你的模块的用户使用起来更加平滑, 而不是很多摩擦. 添加太多的嵌套层级往往处理和使用起来都非常麻烦, 因此在构建它们之前应该想清楚了再去做.
+你应该尽量避免与使用你模块的用户产生摩擦(即应该让用户使用起来更加平滑). 添加太多的嵌套层级往往会让一个模块变得庞大而笨重, 因此在构建它们之前就应该想好如何去做.
 
 Exporting a namespace from your module is an example of adding too many layers of nesting. While namespaces sometime have their uses, they add an extra level of indirection when using modules. This can quickly become a pain point for users, and is usually unnecessary.
 
-从模块中导出一个命名空间是一个添加太多层级的例子. 虽然名字空间有时候也很有用处, 但是他们给模块的使用添加了许多额外层级. 很快就会成为用户的痛点, 并且通常并非必需这么做.
+从模块中导出一个命名空间是一个添加太多嵌套层级的例子. 虽然有时候也会用到名字空间, 但是它们间接地给模块的使用添加了许多额外层级. 这很快就会成为用户的痛点, 并且通常也并不是必须要这么做.
 
 Static methods on an exported class have a similar problem - the class itself adds a layer of nesting. Unless it increases expressivity or intent in a clearly useful way, consider simply exporting a helper function.
 
-导出的类的静态方法也会有类似的问题 - 类本身就是嵌套层. 除非使用类的这种嵌套能明显增加代码的表现力(译者理解表现力: 比如说 `dog.bark()` 这种就比单独的一个函数 `bark()` 更具有表现力, 它能够表示这是一只狗在叫, 单独的一个 `bark()` 并不能说明什么), 否则请考虑导出一个辅助函数.
+导出的类的静态方法也会有类似的问题 - 类本身就嵌套了一层. 除非能明显增加代码的表现力(译者理解表现力: 比如说 `dog.bark()` 这种就比单独的一个函数 `bark()` 更具有表现力, 它能够表示这是一只狗在叫, 单独的一个 `bark()` 并不能说明什么) 或者有你自己的意图在里边, 否则请考虑导出一个辅助函数.
 
 If you’re only exporting a single **`class`** or **`function`**, use **`export default`**
 
@@ -641,7 +647,7 @@ If you’re only exporting a single **`class`** or **`function`**, use **`export
 
 Just as “exporting near the top-level” reduces friction on your module’s consumers, so does introducing a default export. If a module’s primary purpose is to house one specific export, then you should consider exporting it as a default export. This makes both importing and actually using the import a little easier. For example:
 
-正如 "尽可能在顶级导出内容" 能够减少与模块使用者之间的摩擦一样, 默认导出也是如此. 如果一个模块的目的是提供一个统一的出口, 那就更应该考虑把它当做默认导出. 这让导入和导出都会更加轻松, 例如:
+正如 "尽可能在顶级导出内容" 能够减少与模块使用者之间的摩擦一样, 默认导出也是如此. 如果一个模块的主要目的是提供一个统一的出口, 那就更应该考虑把它做成默认导出的形式. 这让导入和使用 import 都会更加轻松, 例如:
 
 ```ts
 // MyClass.ts
@@ -668,7 +674,7 @@ console.log(f());
 
 This is optimal for consumers. They can name your type whatever they want (t in this case) and don’t have to do any excessive dotting to find your objects.
 
-这对使用者来说是最方便的. 它们可以根据自己的喜好任意命名从你那里得到的导出内容, 而不需要使用很多的成员访问符来找到它们要使用的内容(就是`.`, 比如说 `dog.bark()` 就是访问 `dog` 的 `bark` 成员)
+这对使用者来说是最方便的. 它们可以根据自己的喜好任意命名从你那里得到的导出内容, 而不需要使用很多的成员访问符来找到它们要使用的内容(成员访问符即`.`, 比如说 `dog.bark()` 就是访问 `dog` 的 `bark` 成员)
 
 If you’re exporting multiple objects, put them all at top-level
 
@@ -687,7 +693,7 @@ Conversely when importing:
 
 Explicitly list imported names
 
-可以显式的指定引入哪些名字的内容
+显式地罗列出引入内容的名字
 
 ```ts
 // Consumer.ts
@@ -699,7 +705,7 @@ let y = someFunc();
 
 Use the namespace import pattern if you’re importing a large number of things
 
-在引入大量内容时, 如果使用名字空间的模式就像下面这样(就需要使用成员访问符`.`)
+在引入大量内容时, 如果使用名字空间的模式就像下面这样(使用的时候就需要用成员访问符`.`)
 
 ```ts
 // MyLargeModule.ts
@@ -717,15 +723,15 @@ import * as myLargeModule from "./MyLargeModule.ts";
 let x = new myLargeModule.Dog();
 ```
 
-### 通过二次导出来继承
+### 通过二次导出来进行扩展
 
 Often you will need to extend functionality on a module. A common JS pattern is to augment the original object with extensions, similar to how JQuery extensions work. As we’ve mentioned before, modules do not merge like global namespace objects would. The recommended solution is to not mutate the original object, but rather export a new entity that provides the new functionality.
 
-你可能经常会需要继承一个模块的功能. 一种常见的 JS 模式就是通过扩展来增加源对象, 就像 jQuery 的扩展一样. 就像我们前面提到的, 模块不会像全局命名空间哪样合并. 因此推荐的解决方式就是不改变原始对象, 而是导出一个满足功能需求的新实体(大概意思就是重新导出一个模块).
+你可能经常会需要扩展某个模块的功能. 一种常见的 JS 模式就是通过扩展来增加源对象, 类似于 jQuery 的扩展方式一样. 正如我们前面所提及的, 模块不会像全局命名空间对象那样会进行合并(名字空间能够拆分成多个文件, 它们能够引用到另一个文件进行合并). 因此推荐的解决方式就是不改变原始对象, 而是导出一个提供了新功能的新实体(大概意思就是重新导出一个扩展了功能的模块).
 
 Consider a simple calculator implementation defined in module `Calculator.ts`. The module also exports a helper function to test the calculator functionality by passing a list of input strings and writing the result at the end.
 
-以一个定义在模块 `Calculator.ts` 中简单的计算器为例, 这个模块也可以导出一个 (根据传入的输入列表返回计算结果的) 辅助函数来测试计算器功能.
+以一个在模块 `Calculator.ts` 中定义并实现的计算器为例, 这个模块还导出了一个 (根据输入列表返回计算结果的) 辅助函数来测试计算器的功能.
 
 ```ts
 // Calculator.ts
@@ -819,7 +825,7 @@ test(c, "1+2*33/11="); // prints 9
 
 Now to extend this to add support for input with numbers in bases other than 10, let’s create `ProgrammerCalculator.ts`
 
-现在来扩展这个模块让它能够支持其他进制的计算, 创建一个 `ProgrammerCalculator.ts`
+现在来扩展这个模块让它能够支持除了十进制以外其他进制的计算, 先来创建一个 `ProgrammerCalculator.ts`
 
 ```ts
 // ProgrammerCalculator.ts
@@ -853,7 +859,7 @@ export { test } from "./Calculator";
 
 The new module `ProgrammerCalculator` exports an API shape similar to that of the original `Calculator` module, but does not augment any objects in the original module. Here is a test for our ProgrammerCalculator class:
 
-这个新的 `ProgrammerCalculator` 模块导出一个和源 `Calculator` 模块相似的 API, 但是并没有给源模块添加任何东西. 下面测试这个模块:
+新模块 `ProgrammerCalculator` 导出了一个和源模块 `Calculator` 相似的 API, 但并不会给源模块添加任何东西. 下面是 `ProgrammerCalculator` 类的测试:
 
 ```ts
 // TestProgrammerCalculator.ts
@@ -868,33 +874,34 @@ test(c, "001+010="); // prints 3
 
 When first moving to a module-based organization, a common tendency is to wrap exports in an additional layer of namespaces. Modules have their own scope, and only exported declarations are visible from outside the module. With this in mind, namespace provide very little, if any, value when working with modules.
 
-当第一次进入到基于模块的代码组织方式中, 一种常见的趋势就是将导出的内容放到名字空间的附加层中. 模块有自己的作用域, 只有导出的内容才能在模块外部访问. 考虑到这一点, 在使用模块时名字空间提供的价值就非常有限.
+当第一次进入到基于模块的代码组织方式中, 一种常见的趋势就是将导出的内容封装到名字空间的附加层中. 模块有自己的作用域, 只有导出的内容才能在模块外部访问. 考虑到这一点, 在模块中使用名字空间提供的价值就非常有限.
 
-On the organization front, namespaces are handy for grouping together logically-related objects and types in the global scope. For example, in C#, you’re going to find all the collection types in System.Collections. By organizing our types into hierarchical namespaces, we provide a good “discovery” experience for users of those types. Modules, on the other hand, are already present in a file system, necessarily. We have to resolve them by path and filename, so there’s a logical organization scheme for us to use. We can have a /collections/generic/ folder with a list module in it.
+On the organization front, namespaces are handy for grouping together logically-related objects and types in the global scope. For example, in C#, you’re going to find all the collection types in `System.Collections`. By organizing our types into hierarchical namespaces, we provide a good “discovery” experience for users of those types. Modules, on the other hand, are already present in a file system, necessarily. We have to resolve them by path and filename, so there’s a logical organization scheme for us to use. We can have a /collections/generic/ folder with a list module in it.
 
-名字空间在全局范围内将一些逻辑相关的对象组织在一起, 例如 C# 中, 你在 `System.Collections` 中能找到所有的集合类型. 通过将不同类型的代码组织到不同层次的名字空间中能够给用户提供一种很好的 "探索发现" 的体验. 另一方面来说, 模块已经存在与文件系统中, 而且很有必要.  我们必须通过路径和文件名来使用它们, 因此有一种比较符合逻辑的组织方案供我们使用: 比如我们可以用一个 `/collections/generic/` 目录来存放模块列表.
+在组织代码方面, 名字空间可以很方便的将全局范围内的一些逻辑相关的对象组织在一起, 例如在 C# 中, 你能够在 `System.Collections` 中找到所有的集合类型. 通过将我们的类型组织到不同层次的名字空间中能够给用户提供一种很好的 "探索发现" 的体验. 另一方面来说, 模块已经很必要的存在于文件系统中了.  我们必须通过路径和文件名来使用它们, 因此有一种比较符合逻辑的组织方案供我们使用, 比如我们可以用一个 `/collections/generic/` 目录来存放一些列的模块.
 
 Namespaces are important to avoid naming collisions in the global scope. For example, you might have `My.Application.Customer.AddForm` and `My.Application.Order.AddForm` – two types with the same name, but a different namespace. This, however, is not an issue with modules. Within a module, there’s no plausible reason to have two objects with the same name. From the consumption side, the consumer of any given module gets to pick the name that they will use to refer to the module, so accidental naming conflicts are impossible.
 
-名字空间可以避免全局作用域内发生命名冲突. 例如, 你可能有 `My.Application.Customer.AddForm` 和 `My.Application.Order.AddForm` - 两种类型具有同样的名字, 但是处在不同的名字空间中. 然而这并不是模块的问题. 从模块的角度来说, 在同一个模块中, 没有理由让两个对象具有相同的名字. 从使用者的角度来说, 他们通过名字来选择使用指定模块中的哪些内容, 因此命名冲突也是不可能发生在使用者这边的.
+名字空间对全局范围内避免命名冲突非常重要. 例如, 你可能有 `My.Application.Customer.AddForm` 和 `My.Application.Order.AddForm` - 两种类型具有同样的名字但处在不同的名字空间中. 然而这并不是模块的问题. 从模块的角度来说, 在同一个模块中, 没有理由让两个对象具有相同的名字. 从使用者的角度来说, 他们通过名字来指定使用模块中的哪些内容, 因此命名冲突也是不可能发生在使用者这边的.
 
 > For more discussion about modules and namespaces see Namespaces and Modules.
+
 > 更多关于名字空间和模块之间的讨论请看 《名字空间和模块》 一章
 
-### Red Flags
+### 注意事项
 
 All of the following are red flags for module structuring. Double-check that you’re not trying to namespace your external modules if any of these apply to your files:
 
-下面罗列了模块构建中需要避免的一些情况. 如果其中任何一个适用于你的文件, 请多次检查以确保你没有对你的外部模块使用名字空间.
+下面罗列了模块构建中需要避免的一些情况. 如果其中任何一条适用于你的文件, 那么请多次检查以确保你没有对你的外部模块使用名字空间(内部模块才用名字空间).
 
-- A file whose only top-level declaration is `export namespace Foo { ... }` (remove `Foo` and move everything ‘up’ a level)
+- A file whose only top-level declaration is `export namespace Foo { ... }`. (remove `Foo` and move everything ‘up’ a level)
 
->> 如果一个文件唯一的顶级导出是 `export namespace Foo { ... }`(那么请移除 `Foo` 名字空间, 把所有内容都提一个层级)
+>> 如果一个文件唯一的顶级导出内容是 `export namespace Foo { ... }`(那么请移除名字空间 `Foo`, 同时把所有内容都提一个层级)
 
-- A file that has a single `export class` or `export function` (consider using `export default`)
+- A file that has a single `export class` or `export function`. (consider using `export default`)
 
->> 一个文件中只有一个 `export class` 或者 `export function`(请使用`export default`)
+>> 一个文件中只有一个 `export class` 或者 `export function`(请考虑使用`export default`)
 
-- Multiple files that have the same `export namespace Foo {` at top-level (don’t think that these are going to combine into one `Foo`!)
+- Multiple files that have the same `export namespace Foo {` at top-level. (don’t think that these are going to combine into one `Foo`!)
 
->> 多个文件都具有相同的顶级导出内容 `export namespace Foo{`(不要认为他们能够组合成一个 `Foo`!)
+>> 多个文件都具有相同的顶级导出内容 `export namespace Foo{` (不要认为他们能够组合成一个 `Foo`!)
