--- a/Javascript-learning/TypeScript/TypeScript.doc.md/13.Modules.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/13.Modules.TypeScript.doc.md
@@ -1,5 +1,7 @@
 # Modules
 
+(已修订一次)
+
 A note about terminology: It’s important to note that in TypeScript 1.5, the nomenclature has changed. “Internal modules” are now “namespaces”. “External modules” are now simply “modules”, as to align with ECMAScript 2015’s terminology, (namely that module X { is equivalent to the now-preferred namespace X {).
 
 术语注意事项: TypeScript 1.5 中, 为了符合ECMAScript 2015的术语，命名有所改变. "内部模块" 就是现在的 "命名空间".  "外部模块" 才是现在的 "模块 (即 `module X {` 就是现在的 `namespace X {`).
