--- a/Javascript-learning/TypeScript/TypeScript.doc.md/14.Namespaces.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/14.Namespaces.TypeScript.doc.md
@@ -8,17 +8,17 @@ A note about terminology: It’s important to note that in TypeScript 1.5, the n
 
 This post outlines the various ways to organize your code using namespaces (previously “internal modules”) in TypeScript. As we alluded in our note about terminology, “internal modules” are now referred to as “namespaces”. Additionally, anywhere the `module` keyword was used when declaring an internal module, the `namespace` keyword can and should be used instead. This avoids confusing new users by overloading them with similarly named terms.
 
-本文概述了在 TypeScript 中使用名字空间(以前的"内部模块")的各种方法. 正如我们在术语中提到的, "内部模块" 就是现在的 "名字空间". 此外, 在任何使用 `module` 关键字定义内部模块的地方, 都应该使用 `namespace` 关键字代替. 这能够避免相似的命名术语使得新用户产生混淆.
+本文概述了在 TypeScript 中以名字空间(以前的"内部模块") 来组织代码的各种方法. 正如我们在术语中提到的, "内部模块" 就是现在的 "名字空间". 此外, 在任何使用 `module` 关键字定义内部模块的地方, 都应该使用 `namespace` 关键字代替. 这能够避免相似的命名术语使得新用户产生混淆.
 
 ## 第一步
 
 Let’s start with the program we’ll be using as our example throughout this page. We’ve written a small set of simplistic string validators, as you might write to check a user’s input on a form in a webpage or check the format of an externally-provided data file.
 
-从本页的第一个例子开始. 我们写了一些列简单的字符串验证器, 这些验证器可以用来验证用户的输入或者检查外部提供的数据文件格式.
+从一个将贯穿整个页面的示例程序开始。我们写了一系列简单的字符串验证器, 这些验证器可以用来验证用户的输入或者检查外部提供的数据文件格式.
 
 Validators in a single file
 
-这些验证器都在单个文件中
+这些验证器现在都在同一个文件中
 
 ```ts
 interface StringValidator {
@@ -61,11 +61,11 @@ for (let s of strings) {
 
 As we add more validators, we’re going to want to have some kind of organization scheme so that we can keep track of our types and not worry about name collisions with other objects. Instead of putting lots of different names into the global namespace, let’s wrap up our objects into a namespace.
 
-我们添加越多的验证器, 就越希望能有一种组织方式能让我们跟踪我们的代码并且可以避免和其它对象产生命名冲突. 我们将自己的代码封装到一个单独的名字空间来取代把一大堆不同的声明直接放到全局名字空间中.
+随着我们添加的验证器越来越多, 我们就越希望能有一种组织方式能让我们轻易的跟踪我们的代码并且可以避免和其它对象产生命名冲突. 接下来通过将我们的代码封装到一个单独的名字空间中来取代先前那种把一大堆各式各样的声明直接暴露在全局名字空间中的做法.
 
 In this example, we’ll move all validator-related entities into a namespace called `Validation`. Because we want the interfaces and classes here to be visible outside the namespace, we preface them with `export`. Conversely, the variables `lettersRegexp` and `numberRegexp` are implementation details, so they are left unexported and will not be visible to code outside the namespace. In the test code at the bottom of the file, we now need to qualify the names of the types when used outside the namespace, e.g. `Validation.LettersOnlyValidator`.
 
-这个例子中, 我们会将所有验证相关的实体放到一个名叫 `Validation` 的名字空间中. 因为我们希望这些接口和类能在名字空间之外访问, 因此还需要使用 `export` 来导出. 相反, `lettersRegexp` 和 `numberRegexp` 变量是实现细节, 因此不导出它们, 这样在名字空间之外就无法直接访问到它们了. 在文件底部的测试代码中, 我们需要在名字空间之外使用这些类型, 如 `Validation.LettersOnlyValidator`.
+在这个例子中, 我们会将所有验证相关的实体放到一个名叫 `Validation` 的名字空间中. 因为我们希望这些接口和类能在名字空间之外访问, 因此还需要使用 `export` 来导出. 相反, `lettersRegexp` 和 `numberRegexp` 变量是实现细节, 因此不导出它们, 这样在名字空间之外也就无法直接访问到它们了. 在文件底部的测试代码中, 我们需要对类型的名称以名字空间进行限定才能在名字空间之外使用这些类型, 如 `Validation.LettersOnlyValidator`.
 
 Namespaced Validators
 
@@ -119,7 +119,7 @@ As our application grows, we’ll want to split the code across multiple files t
 
 Here, we’ll split our `Validation` namespace across many files. Even though the files are separate, they can each contribute to the same namespace and can be consumed as if they were all defined in one place. Because there are dependencies between files, we’ll add reference tags to tell the compiler about the relationships between the files. Our test code is otherwise unchanged.
 
-这里, 我们将 `Validation` 名字空间切分到多个文件中. 尽管每个文件是独立的, 但是它们都服务于同一个名字空间, 并且可以被使用, 就像他们是在同一个地方定义的一样. 因为文件之间相互依赖, 我们需要添加引用标记(引用标记如 `/// <reference path="Validation.ts" />`)来告诉编译器这些文件之间的关系. 我们的测试代码保持不变.
+这里, 我们将 `Validation` 名字空间切分到多个文件中. 尽管每个文件都是独立的, 但是它们都服务于同一个名字空间, 并且可以像它们都是在同一个地方定义的一样被使用. 因为文件之间存在依赖关系, 为此我们需要添加引用标记(引用标记如 `/// <reference path="Validation.ts" />`)来告诉编译器这些文件之间的关系. 我们的测试代码保持不变.
 
 ```ts
 // Validation.ts
@@ -184,11 +184,11 @@ for (let s of strings) {
 
 Once there are multiple files involved, we’ll need to make sure all of the compiled code gets loaded. There are two ways of doing this.
 
-一旦涉及到多个文件，我们就需要确保所有编译后的代码都被加载。有两种方法可以做到这一点。
+一旦涉及到多个文件，我们就需要确保所有编译后的代码会都被加载到程序中。有两种方法可以做到这一点。
 
 First, we can use concatenated output using the `--outFile` flag to compile all of the input files into a single JavaScript output file:
 
-第一种, 我们可以使用级联输出标记 `--outFile` 来告诉编译器将所有输入的文件全部都输出到一个文件中:
+第一种, 我们可以使用级联输出标记 `--outFile` 来告诉编译器将所有输入的文件全部都编译到一个输出文件中:
 
 `tsc --outFile sample.js Test.ts`
 
