--- a/Javascript-learning/TypeScript/TypeScript.doc.md/14.Namespaces.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/14.Namespaces.TypeScript.doc.md
@@ -194,13 +194,13 @@ First, we can use concatenated output using the `--outFile` flag to compile all 
 
 The compiler will automatically order the output file based on the reference tags present in the files. You can also specify each file individually:
 
-编译器就会自动根据文件中引用标签的顺序来给输出内容排序. 你也可以逐个指定每个文件.
+编译器就会自动根据文件中引用标签的顺序来给输出内容排序. 你也可以分开指定每个文件.
 
 `tsc --outFile sample.js Validation.ts LettersOnlyValidator.ts ZipCodeValidator.ts Test.ts`
 
 Alternatively, we can use per-file compilation (the default) to emit one JavaScript file for each input file. If multiple JS files get produced, we’ll need to use `<script>` tags on our webpage to load each emitted file in the appropriate order, for example:
 
-第二种方式, 我们可以单独编译每一个文件, 这样就会为每个文件都产生 JavaScript 的输出文件. 如果编译了多个文件, 我们就需要在页面中使用 `<script>` 标签按正确的顺序加载它们, 例如:
+第二种方式, 我们可以单独编译每一个文件, 这样就会为每个文件都编译出 JavaScript 文件. 如果分别编译了多个文件, 我们就需要在页面中使用 `<script>` 标签按正确的顺序加载它们, 例如:
 
 ```html
 <!-- MyTestPage.html (excerpt) -->
@@ -215,7 +215,7 @@ Alternatively, we can use per-file compilation (the default) to emit one JavaScr
 
 Another way that you can simplify working with of namespaces is to use `import q = x.y.z` to create shorter names for commonly-used objects. Not to be confused with the `import x = require("name")` syntax used to load modules, this syntax simply creates an alias for the specified symbol. You can use these sorts of imports (commonly referred to as aliases) for any kind of identifier, including objects created from module imports.
 
-另一种简化使用名字空间的方法就是使用 `import q = x.y.z` 这种方式为常用的对象起一个简短的名字. 不要与 `import x = require("name")` 这种加载模块的语法产生混淆, 这个语法只是给指定的符号创建了一个别名. 这种引入方式可以用于任何种类的标识符, 包括从模块引入的对象.
+另一种简化使用名字空间的方法就是使用 `import q = x.y.z` 这种方式为常用的对象起一个简短的名字. 不要与 `import x = require("name")` 这种加载模块的语法产生混淆, 这个语法只是给指定的符号创建了一个别名. 你可以将这种导入方式（通常被称为别名）用于任何种类的标识符, 包括从模块引入的对象.
 
 ```ts
 namespace Shapes {
@@ -231,7 +231,7 @@ let sq = new polygons.Square(); // Same as 'new Shapes.Polygons.Square()'
 
 Notice that we don’t use the `require` keyword; instead we assign directly from the qualified name of the symbol we’re importing. This is similar to using `var`, but also works on the type and namespace meanings of the imported symbol. Importantly, for values, `import` is a distinct reference from the original symbol, so changes to an aliased `var` will not be reflected in the original variable.
 
-注意, 我们并没有使用关键字 `require`, 而是直接使用通过 `import` 得到的名字. 这就跟使用 `var` 一样, 但也适用于导入类型和有名字空间含义的内容. 重要的是, 对于值来说, `import` 生成与源符号不同的引用, 因此对 `var` 的改变不会反映到源变量中.
+注意, 我们并没有使用关键字 `require`, 而是直接使用通过 `import` 得到的符号. 这就跟使用 `var` 变量一样, 但是它能够使导入的符号的类型和它的名字空间含义都得到发挥. 重要的是, 对于值来说, `import` 会生成与源符号不同的引用, 因此修改一个 `var` 变量的别名并不会反映到源变量中（并不是真的说是 `var` 变量的别名，因为前面说“跟使用 `var` 变量一样”，这里就直接用 `var` 变量进行了类比）.
 
 ## 使用其他 JavaScript 库
 
@@ -241,13 +241,13 @@ To describe the shape of libraries not written in TypeScript, we need to declare
 
 We call declarations that don’t define an implementation “ambient”. Typically these are defined in `.d.ts` files. If you’re familiar with C/C++, you can think of these as `.h` files. Let’s look at a few examples.
 
-我们称那些没有定义实现代码的声明为 "ambient". 通常它们被定义在 `.d.ts` 文件中. 如果你对 C/C++ 比较熟悉, 你可以把它们当做 `.h` 一样的头文件. 让我们来看一些例子.
+我们称那些没有定义实现代码的声明为 "外围"（ambient）. 通常它们被定义在 `.d.ts` 文件中. 如果你对 C/C++ 比较熟悉, 你可以把它们当做 `.h` 一样的头文件. 让我们来看一些例子.
 
-### Ambient 名字空间
+### 外围（Ambient）名字空间
 
 The popular library D3 defines its functionality in a global object called `d3`. Because this library is loaded through a `<script>` tag (instead of a module loader), its declaration uses namespaces to define its shape. For the TypeScript compiler to see this shape, we use an ambient namespace declaration. For example, we could begin writing it as follows:
 
-比较流行的 D3 库把它的功能都绑定在一个全局变量 `d3` 上. 因为这个库是使用 `<script>` 标签加载的(而不是模块加载器), 因此我们需要使用名字空间来声明它的样子(因为只是声明而没有实现, 实现部分是通过 `<script>` 标签加载进来的, 在我们编写 TypeScript 项目的代码中并没有引入这部分具体实现的代码). 我们使用 ambient 名字空间来对 D3 库进行声明的目的是为了让 TypeScript 编译器知道这个库的样子(就是在还没有具体实现代码的情况下, 提前告诉 TypeScript 编译器这个库需要怎么使用, 先假装有这么个东西在, 这样 TypeScript 编译器就能够根据声明的样子来进行类型检查等). 例如, 我们可以开始像下面这样写:
+比较流行的 D3 库把它的功能都绑定在一个全局变量 `d3` 上. 因为这个库是使用 `<script>` 标签加载的(而不是模块加载器), 因此我们使用名字空间来声明它的样子（因为只是声明而没有实现, 实现部分是通过 `<script>` 标签加载进来的, 在我们正在编写的 TypeScript 项目的代码中并没有引入这部分代码的具体实现）. 我们使用外围名字空间来对 D3 库进行声明的目的是为了让 TypeScript 编译器知道这个库的样子(就是在还没有加入具体实现代码的情况下, 提前告诉 TypeScript 编译器这个库需要怎么使用, 先假装有这么个东西在, 这样 TypeScript 编译器就能够根据声明的样子来进行类型检查等). 例如, 我们可以从下面这样开始写:
 
 ```ts
 // D3.d.ts (simplified excerpt)
