--- a/Javascript-learning/TypeScript/TypeScript.doc.md/15.NamespacesAndModules.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/15.NamespacesAndModules.TypeScript.doc.md
@@ -1,12 +1,16 @@
 # Namespaces and Modules
 
+(已修订一次)
+
 A note about terminology: It’s important to note that in TypeScript 1.5, the nomenclature has changed. “Internal modules” are now “namespaces”. “External modules” are now simply “modules”, as to align with ECMAScript 2015’s terminology, (namely that module X { is equivalent to the now-preferred namespace X {).
+
+术语注意事项: TypeScript 1.5 中, 为了符合ECMAScript 2015的术语，命名有所改变. "内部模块" 就是现在的 "命名空间".  "外部模块" 才是现在的 "模块 (即 `module X {` 就是现在的 `namespace X {`).
 
 ## 前言
 
 This post outlines the various ways to organize your code using namespaces and modules in TypeScript. We’ll also go over some advanced topics of how to use namespaces and modules, and address some common pitfalls when using them in TypeScript.
 
-这篇文章的讲述了在 TypeScript 中如何使用名字空间和模块来组织你的代码. 我们还会复习一些使用名字空间和模块的高级话题和定位一些使用过程中遇到的常见错误.
+这篇文章讲述了在 TypeScript 中如何使用名字空间和模块来组织你的代码. 我们还会复习一些使用名字空间和模块的高级话题和定位一些使用过程中遇到的常见错误.
 
 See the Modules documentation for more information about modules. See the Namespaces documentation for more information about namespaces.
 
@@ -16,11 +20,11 @@ See the Modules documentation for more information about modules. See the Namesp
 
 Namespaces are simply named JavaScript objects in the global namespace. This makes namespaces a very simple construct to use. They can span multiple files, and can be concatenated using `--outFile`. Namespaces can be a good way to structure your code in a Web Application, with all dependencies included as `<script>` tags in your HTML page.
 
-名字空间是全局名字空间中一个具名(具名就是带有名字的)的 JavaScript 对象. 这就使得名字空间是一个非常简单易用的结构. 它们可以跨多个文件, 可以使用 `--outFile` 来将它们连在一起. 名字空间是一种用于在 web 应用中组织代码结构的好方案, 所有依赖项都包含在HTML页面中的 `<script >` 标签中进行加载。
+(我们定义的)名字空间是全局名字空间中一个具名(具名就是带有名字的) 的 JavaScript 对象. 这就决定了名字空间是一个非常简单易用的结构(因为它就是个 JavaScript 对象). 它们可以跨多个文件, 可以使用 `--outFile` 来将它们连在一起. 在 web 应用中, 使用名字空间来组织你代码的结构是一种不错的方案, 所有依赖项都通过`<script >` 标签在 HTML 页面中进行加载。
 
 Just like all global namespace pollution, it can be hard to identify component dependencies, especially in a large application.
 
-就像所有的全局名字空间污染一样, 名字空间很难区分组件的依赖关系, 尤其是在大型项目中.
+(缺点:) 就像所有的全局名字空间污染一样, 使用名字空间很难区分组件的依赖关系, 尤其是在大型项目中更是如此.
 
 ## 使用模块
 
@@ -30,27 +34,27 @@ Just like namespaces, modules can contain both code and declarations. The main d
 
 Modules also have a dependency on a module loader (such as CommonJs/Require.js). For a small JS application this might not be optimal, but for larger applications, the cost comes with long term modularity and maintainability benefits. Modules provide for better code reuse, stronger isolation and better tooling support for bundling.
 
-模块还依赖于模块加载器 (如 CommonJS/Require.js). 对于小的 JS 项目来说模块可能并不是最优的方案, 但是对于一个大型项目来说, 它带来的就是长期的模块化和可维护性的好处. 模块让为代码的打包提供了可重用的代码, 更强的隔离性和更好的工具支持.
+模块还依赖于模块加载器 (如 CommonJS/Require.js). 对于小的 JS 项目来说模块可能并不是最优的方案(小项目如前面所说的使用名字空间), 但是对于一个大型项目来说, 它带来的就是长期的模块化和保持良好可维护性的好处. 在打包过程中, 模块给代码带来了更好的可重用性, 更强的隔离性和更好的工具支持.
 
 It is also worth noting that, for Node.js applications, modules are the default and the recommended approach to structure your code.
 
-同样值得注意的是, 对于 Node.js 应用来说, 模块是默认的也是推荐的用于组织代码结构的方式.
+同样值得注意的是, 对于 Node.js 应用来说, 模块也是默认的同时也是(官方)推荐的用于组织代码结构的方式.
 
 Starting with ECMAScript 2015, modules are native part of the language, and should be supported by all compliant engine implementations. Thus, for new projects modules would be the recommended code organization mechanism.
 
-从 ECMAScript 2015 开始, 模块就成了 JavaScript 的一部分, 并且应该被所有兼用的引擎实现. 因此, 对于新的项目来说, 建议使用模块的机制来组织代码.
+从 ECMAScript 2015 开始, 模块就成了 JavaScript 的一部分, 并且应该被所有兼容的引擎实现. 因此, 对于新的项目来说, 建议使用模块的机制来组织代码.
 
 ## 名字空间和模块的陷阱
 
 In this section we’ll describe various common pitfalls in using namespaces and modules, and how to avoid them.
 
-在这一节中我们讲述在使用名字空间和模块时遇到的常见陷阱, 以及如何避免它们.
+在这一节中我们将讲述在使用名字空间和模块时遇到的常见陷阱, 以及如何避免它们.
 
 ### **`/// <reference>`** 一个模块
 
 A common mistake is to try to use the `/// <reference ... />` syntax to refer to a module file, rather than using an `import` statement. To understand the distinction, we first need to understand how compiler can locate the type information for a module based on the path of an `import` (e.g. the `...` in `import x from "...";`, `import x = require("...");`, etc.) path.
 
-一个常见的错误就是使用 `/// <reference ... />` 语法来引入一个模块文件, 而不是使用 `import` 语句. 要理解它们之间的区别, 首先需要了解编译器是如何根据 `import` 的路径来定位模块的类型信息的 (如 `import x from "..."` 中的 `...`, `import x = require("...")` 等)
+一个常见的错误就是使用 `/// <reference ... />` 语法来引入一个模块文件, 而不是使用 `import` 语句. 要理解它们之间的区别, 首先需要了解编译器是如何根据 `import` 的路径来定位模块类型信息的 (如 `import x from "..."` 中的 `...`, `import x = require("...")` 等)
 
 The compiler will try to find a `.ts`, `.tsx`, and then a `.d.ts` with the appropriate path. If a specific file could not be found, then the compiler will look for an ambient module declaration. Recall that these need to be declared in a `.d.ts` file.
 
@@ -74,9 +78,9 @@ import * as m from "SomeModule";
 
 The reference tag here allows us to locate the declaration file that contains the declaration for the ambient module. This is how the `node.d.ts` file that several of the TypeScript samples use is consumed.
 
-这里的引用标记能够允许我们定位包含了外围模块的声明文件. 这就是 `node.d.ts` 文件中的几个 TypeScript 例子如何被使用的方式.
+这里的引用标记能够允许我们定位包含了外围模块的声明文件. 这就是 `node.d.ts` 文件中的几个 TypeScript 例子是如何被使用的.
 
-### Needless Namespacing
+### 不需要 namespace 的情况
 
 If you’re converting a program from namespaces to modules, it can be easy to end up with a file that looks like this:
 
@@ -93,7 +97,7 @@ export namespace Shapes {
 
 The top-level module here `Shapes` wraps up `Triangle` and `Square` for no reason. This is confusing and annoying for consumers of your module:
 
-这里的顶层模块 `Shapes` 毫无理由的包含了 `Triangle` 和 `Square`. 这会使得模块的使用者混淆和烦恼.
+这里的顶层模块 `Shapes` 毫无理由的包含了 `Triangle` 和 `Square`. 这会使得模块的使用者混淆和烦恼(因为使用者要用 `shapes.Shapes.Triangle` 才能访问到它要的 `Triangle` 类).
 
 ```ts
 // shapeConsumer.ts
@@ -104,11 +108,11 @@ let t = new shapes.Shapes.Triangle(); // shapes.Shapes?
 
 A key feature of modules in TypeScript is that two different modules will never contribute names to the same scope. Because the consumer of a module decides what name to assign it, there’s no need to proactively wrap up the exported symbols in a namespace.
 
-TypeScript 中模块的一个关键特性就是两个不同的模块永远都不会在同一个作用域内产生相同的名字. 因为模块的使用者会决定指派给它们什么名字. 因此没有必要主动的用名字空间来包裹导出的这些符号.
+TypeScript 中模块的一个关键特征就是两个不同的模块永远都不会在相同的范围内产生相同的名字. 因为模块的使用者会决定指派给它们什么名字. 因此没有必要主动的用名字空间来包裹导出的这些符号.
 
 To reiterate why you shouldn’t try to namespace your module contents, the general idea of namespacing is to provide logical grouping of constructs and to prevent name collisions. Because the module file itself is already a logical grouping, and its top-level name is defined by the code that imports it, it’s unnecessary to use an additional module layer for exported objects.
 
-再次重申为什么你不应该使用名字空间来封装你模块的内容, 因为名字空间的一般想法是用于将逻辑相关的结构分组和防止命名冲突. 由于模块文件本身已经是一个逻辑分组, 并且它顶级名字通过导入它的时候命名了, 因此没有必要给导出的对象再添加一个额外的模块层.
+再次重申为什么你不应该使用名字空间来封装你模块的内容, 因为名字空间的一般想法是用于将逻辑相关的结构分组和解决命名冲突. 由于模块文件本身已经是一个逻辑分组, 并且在导入它的时候就指定了其顶级内容的名字, 因此没有必要给导出的对象再添加一个额外的模块层.
 
 Here’s a revised example:
 
@@ -132,4 +136,4 @@ let t = new shapes.Triangle();
 
 Just as there is a one-to-one correspondence between JS files and modules, TypeScript has a one-to-one correspondence between module source files and their emitted JS files. One effect of this is that it’s not possible to concatenate multiple module source files depending on the module system you target. For instance, you can’t use the `outFile` option while targeting `commonjs` or `umd`, but with TypeScript 1.8 and later, it’s possible to use `outFile` when targeting `amd` or `system`.
 
-就像 JS 文件和模块之间一一对应一样, TypeScript 也将模块的源文件和产生的 JS 文件一一对应. 这样做的一种影响就是无法根据你指定的目标模块系统将多个模块源文件连接起来.
+就像 JS 文件和模块之间一一对应一样, TypeScript 也将模块的源文件和产生的 JS 文件一一对应. 这样做的一种副作用就是无法根据你指定的目标模块系统将多个模块源文件连接起来. 例如, 你不能在指定为 `commonjs` 或者 `umd` 的时候使用 `outFile` 选项(将它们打包到一起), 但是自从 TypeScript 1.8 及以后, 能够为 `amd` 和 `system` 指定 `outFile` (来打包到一起).
