--- a/Javascript-learning/TypeScript/TypeScript.doc.md/5.Functions.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/5.Functions.TypeScript.doc.md
@@ -148,7 +148,7 @@ Any optional parameters must follow required parameters. Had we wanted to make t
 
 In TypeScript, we can also set a value that a parameter will be assigned if the user does not provide one, or if the user passes `undefined` in its place. These are called default-initialized parameters. Let’s take the previous example and default the last name to "Smith".
 
-在 TypeScript 中, 我们还可以给参数指定默认值, 如果调用函数的时候没有传这个值或者传入的值为 `undefined`, 那这个参数的值就位默认值. 这被称作默认值参数. 我们现在把前面的例子中 `lastName` 默认值设置为 "Smith".
+在 TypeScript 中, 我们还可以给参数指定默认值, 如果调用函数的时候没有传这个值或者传入的值为 `undefined`, 那这个参数的值就为默认值. 这被称作默认值参数. 我们现在把前面的例子中 `lastName` 默认值设置为 "Smith".
 
 ```ts
 function buildName(firstName: string, lastName = "Smith") {
